--- a/Week 2/Exercise 1/index.html
+++ b/Week 2/Exercise 1/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Instagram API</title>
+	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-	<script src="libs/aja.min.js"></script>
+	<script src="static/libs/aja.min.js"></script>
 </head>
 <body>
 	<h1>Popular Pictures</h1>
 	<ul class="popular"></ul>
 
 	<!-- Scripts -->
-	<script src="scripts/script.js"></script>
+	<script src="static/scripts/script.js"></script>
 </body>
 </html>
